fix the effect being able to go overflow and custom effect overwritting

--- a/id-creator/src/utils/DownloadBtn/DownloadBtn.css
+++ b/id-creator/src/utils/DownloadBtn/DownloadBtn.css
@@ -5,7 +5,7 @@
     padding: 6px;
     z-index: 999;
     top: 120px;
-    right: 5px;
+    right: 15px;
     border: 2px solid white;
     background-color: var(--button);
 }
